--- a/HTML/style.css
+++ b/HTML/style.css
@@ -1,11 +1,10 @@
 *{
-    margin-top: 0%;
-    margin-left: 0%;
-    margin-right: 0%;
+    margin: 0px;
+    padding: 0px;
 }
 
 body {
-    background-color: aqua;
+    background-color: white;
     }
 
 #navbar {
@@ -13,11 +12,21 @@ background-color: #f7f8fc;
 border: 2px solid black;
 padding: 16px 0px;
 width: 100%;
+margin: auto;
 
 }
 .navigation{
     list-style: none;
+    display: inline;
+    margin: auto;
+    padding: 0px 0px;
+
     
 
+}
+.btn{
+    display: inline;
+    padding-left: 100%;
+    padding-right: 0%;
 }
 
