--- a/HTML/style.css
+++ b/HTML/style.css
@@ -1,32 +1,54 @@
-*{
-    margin: 0px;
-    padding: 0px;
+* {
+  margin: 0%;
+  padding: 0%;
+}
+nav{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 16px 0px;
+    /* border: 2px solid green; */
+    box-shadow: rgba(157, 157, 157, 0.2) 0px 4px 10px;
+
+    background-color: #F7F8FC;
+}
+.navbar {
+  width: 100%;
+  height: 100vh;
+ 
+  /* padding: 16px 0px; */
+  display: inline-block;
+  
+}
+.navigation {
+  list-style: none;
+  padding-left: 80px;
+}
+.list {
+  display: inline;
+  margin: 30px;
+  font-size: 20px;
 }
 
-body {
-    background-color: white;
-    }
-
-#navbar {
-background-color: #f7f8fc;
-border: 2px solid black;
-padding: 16px 0px;
-width: 100%;
-margin: auto;
-
-}
-.navigation{
-    list-style: none;
-    display: inline;
-    margin: auto;
-    padding: 0px 0px;
-
+.btn {
+    float: right;
+    justify-content: space-between;
+    padding-right: 140px;
     
-
-}
-.btn{
-    display: inline;
-    padding-left: 100%;
-    padding-right: 0%;
+    
+   
 }
 
+.btn button {
+  margin: 2px;
+  font-family: Rubik, sans-serif;
+  width: 147px;
+  height: 37px;
+  font-size: 16px;
+  border-radius: 0.375rem;
+}
+#icon{
+    margin: 0px 0px 0px 8px;
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+}
