done with the client page and started blogging page

--- a/cafedaze/style.css
+++ b/cafedaze/style.css
@@ -70,7 +70,7 @@
 }
 .div3 {
   width: 100%;
-  height: 100vh;
+  height: 90vh;
   position: relative;
 }
 .aboutshop {
@@ -125,6 +125,7 @@
   background-image: url("./images/client-bg.png");
   width: 100%;
   height: 100vh;
+  /* margin: 80px; */
 }
 
 .div4 h1{
@@ -137,12 +138,61 @@
 }
 .client{
   justify-content: center;
-  width: 100%;
+  width: 60%;
   display: flex;
   align-items: center;
   flex-direction: column;
+  /* margin-top: 90px; */
+  padding-top: 70px;
+  margin: auto;
 
 }
 .client img{
   float: left;
+  padding: 20px;
+}
+.client h2{
+  font-size: 30px;
+  font-weight: bolder;
+  font-family: inherit;
+  padding-top: 10px;
+}
+.client p{
+  font-size: 24px;
+  width: 85%;
+  font-weight: ;
+
+}
+.div5{
+  width: 100%;
+  height: 100vh;
+}
+.div5 h1{
+  font-size: 60px;
+  align-content: center;
+  display: block;
+  text-align: center;
+  padding-top: 80px;
+  margin-bottom: 10px;  
+}
+.blogdiv{
+  border: 2px solid black;
+  display: inline-block;
+  /* justify-content: center;
+  align-items: center; */
+  width: 35%;
+  height: 70vh;
+  margin: 20px;
+  /* padding: 40px; */
+  
+ 
+}
+.div-ourblog{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.blogdiv img{
+  width: 100%;
+  height: auto;   
 }
