--- a/cafedaze/style.css
+++ b/cafedaze/style.css
@@ -1,3 +1,11 @@
+body{
+  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+  /* font-weight: bolder; */
+  /* font-family-sans-serif: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+    --font-family-monospace: SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace; */
+}
+
+
 .navlist {
   list-style: none;
   color: white;
@@ -158,7 +166,7 @@
   padding-top: 10px;
 }
 .client p{
-  font-size: 24px;
+  font-size: 20px;
   width: 85%;
   font-weight: ;
 
@@ -167,16 +175,20 @@
   width: 100%;
   height: 100vh;
 }
+.div5 .dots {
+  padding-bottom: 20px;
+}
 .div5 h1{
   font-size: 60px;
   align-content: center;
   display: block;
   text-align: center;
-  padding-top: 80px;
+  padding-top: 30px;
   margin-bottom: 10px;  
+ 
 }
 .blogdiv{
-  border: 2px solid black;
+  border: 0.5px solid black;
   display: inline-block;
   /* justify-content: center;
   align-items: center; */
@@ -184,15 +196,56 @@
   height: 70vh;
   margin: 20px;
   /* padding: 40px; */
-  
+  box-shadow: 0 0 30px 0; 
  
 }
 .div-ourblog{
   display: flex;
   justify-content: center;
   align-items: center;
+ 
 }
 .blogdiv img{
   width: 100%;
-  height: auto;   
+  height: auto;  
+  
+
 }
+.div5 button{
+  color: #d78373;
+  font-size: 18px;
+  width: 180px;
+  height: 50px;
+  background: none;
+  border: #d78373 0.5px solid;
+  border-radius: 5px;
+  margin-top: 60px;
+  margin-left: 35%;
+}
+.div5 p{
+  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+  font-size: 19px;
+  margin: 4px;
+  padding: 0px 12px;
+}
+.div5 h2{
+/* padding-left: 14px; */
+margin-left: 14px;
+
+}
+.div6 h1{
+  font-size: 60px;
+  align-content: center;
+  display: block;
+  text-align: center;
+  padding-top: 30px;
+  margin-bottom: 10px;  
+  font-weight: 700;
+}
+.div6 img{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+   font-family-sans-serif: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+    /* --font-family-monospace: SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace; */
+} 
