--- a/HTML AND CSS project/BLUENE/style.css
+++ b/HTML AND CSS project/BLUENE/style.css
@@ -1,8 +1,8 @@
 
 body{
-   
     font-family: 'Poppins', sans-serif;
-    font-family: 'Sigmar', sans-serif;
+    /* font-family: 'Poppins', sans-serif;
+    font-family: 'Sigmar', sans-serif; */
     width: 100%;
     height: 100vh;
     margin: 0%  ;
@@ -67,6 +67,8 @@ body{
     width: 300px;
     height: 70px;
     color: red;
+    font-weight: 700px;
+    
 
 
 }
@@ -103,6 +105,7 @@ body{
 .rightside h2{
     font-size: 40px;
     line-height: 15px;
+    
 
 }
 
@@ -114,6 +117,7 @@ body{
 }
 
 .rightside a{
+    font-size: 17px;
     text-decoration: none;
     display: flex;
     margin-top: 50px;
@@ -167,6 +171,7 @@ body{
 #page4 h2{
     font-size: 50px;
     margin: 25px 0px;
+    font-weight: 700;
 
 }
 #page4 p{
@@ -200,6 +205,8 @@ body{
 .h2element h2{
     font-size: 80px;
     line-height: 40px;
+    font-weight: bolder;
+    color: rgba(240, 248, 255, 0.785);
 }
 #contact{
     width: 650px;
@@ -226,6 +233,7 @@ ul{
 
 }
 .contact_list li h2,a{
+    
     font-size: 40px;
 }
 
@@ -233,4 +241,7 @@ ul{
     display: block;
     padding: 0px 140px;
     font-size: 17px;
+}
+#call{
+    padding-top: 25px;
 }
